Fixed mobile footer spacing
It was fine before but even better now!

--- a/css/main.css
+++ b/css/main.css
@@ -209,7 +209,7 @@ About Image: https://s-media-cache-ak0.pinimg.com/originals/9b/e6/b2/9be6b21eab7
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    width: 80%;
+    width: 100%;
 }
 
 .footer-content {
@@ -228,8 +228,15 @@ About Image: https://s-media-cache-ak0.pinimg.com/originals/9b/e6/b2/9be6b21eab7
 .footer-icon {
 	height: 2rem;
 	width: 2rem;
-	margin: 0 0.5rem;
+	margin: 0;
 	vertical-align: middle;
+}
+
+@media (min-width: 73em) {
+
+	.footer-icon {
+		margin: 0 0.5rem;;
+	}
 }
 
 /*
